# RV-search-engine

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
electron/: main.js  preload.js
redis_search_engine/: __init__.py  engine.py  external_search.py  main.py  text.py
tests/: test_api.py  test_engine.py  test_text.py
ui/: index.html  renderer.js  styles.css
